.toList()로 수정